tests/ui/nll/issue-53040.stderr
error: captured variable cannot escape `FnMut` closure body
  --> $DIR/issue-53040.rs:3:8
   |
LL |     let mut v: Vec<()> = Vec::new();
   |         ----- variable defined here
LL |     || &mut v;
   |      - ^^^^^-
   |      | |    |
   |      | |    variable captured here
   |      | returns a reference to a captured variable which escapes the closure body
   |      inferred to be a `FnMut` closure
   |
   = note: `FnMut` closures only have access to their captured variables while they are executing...
   = note: ...therefore, they cannot allow references to captured variables to escape

error: aborting due to 1 previous error

