tests/ui/nll/issue-53040.rs
fn main() {
    let mut v: Vec<()> = Vec::new();
    || &mut v;
//~^ ERROR captured variable cannot escape `FnMut` closure body
}
